<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/reset_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText">

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:imeOptions="actionDone"
            android:importantForAutofill="yes"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnConfirmReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>